# Ignitia-Sample

./: .gitignore  .replit  README.md  deploy-backend.bat  deploy-backend.sh  docker-compose.yml  firestore.rules  next.config.ts  package-lock.json  package.json  replit.md  tailwind.config.ts  vercel.json
docs/: SUPABASE_SETUP.md  backend.json  blueprint.md  supabase-schema.sql
rust-backend/: .dockerignore  Cargo.toml  Dockerfile  Procfile  README.md  SETUP.md  docker-compose.yml  docker-setup.bat  find-postgres-password.md  quick-start.bat  railway.toml  render.yaml  setup-db.bat  setup-sqlite.bat  test-api.ps1
rust-backend/examples/: api_client.rs
rust-backend/migrations/: 001_initial.sql  002_seed_data.sql
rust-backend/migrations-sqlite/: 001_initial.sql  002_seed_data.sql
rust-backend/scripts/: setup.bat  setup.sh
rust-backend/src/: main.rs
rust-backend/tests/: integration_test.rs
scripts/: run-sql.js
src/: middleware.ts
src/ai/: dev.ts
src/ai/flows/: chatbot-answers-faqs.ts  chatbot-escalates-complex-issues.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/(app)/: layout.tsx  loading.tsx  page.tsx
src/app/admin/: layout.tsx  page.tsx
src/app/login/: page.tsx
src/backend/: README.md  index.ts
src/components/: AnimatedGrid.tsx  ConcertHero.tsx  FirebaseErrorListener.tsx  sponsors.tsx
src/contexts/: auth-context.tsx
src/firebase/: config.ts  index.ts
src/hooks/: use-cart-store.ts
src/lib/: auth.ts  mock-profile-data.ts  placeholder-data.ts  placeholder-images.json  razorpay.ts  supabase.ts  types.ts  utils.ts
(+104 files in other folders)
