[package]
name = "nextn-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "uuid", "chrono", "macros"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Authentication
bcrypt = "0.15"
jsonwebtoken = "9.0"

# Environment and configuration
dotenv = "0.15"
config = "0.14"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# HTTP client (for payment gateway integration)
reqwest = { version = "0.11", features = ["json"] }

# Base64 encoding
base64 = "0.21"

# Cryptography for payment verification
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# Email functionality
lettre = "0.11"
tokio-native-tls = "0.3"

[dev-dependencies]
tokio-test = "0.4"